--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "react-dom": "^17.0.1",
     "react-is": "^17.0.1",
     "styled-components": "^5.2.1"
+  },
+  "scripts": {
+    "lint": "eslint . --ext .js,.ts,.tsx"
   }
 }
