--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@babel/preset-react": "^7.12.5",
     "@babel/preset-typescript": "^7.12.1",
     "@babel/runtime": "^7.12.5",
+    "@hot-loader/react-dom": "^17.0.0",
+    "@svgr/webpack": "^5.4.0",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
@@ -17,8 +19,15 @@
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "babel-loader": "^8.1.0",
+    "case-sensitive-paths-webpack-plugin": "^2.3.0",
+    "circular-dependency-plugin": "^5.2.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "^6.1.1",
+    "copy-webpack-plugin": "^6.3.1",
+    "dotenv": "^8.2.0",
+    "dotenv-expand": "^5.1.0",
     "eslint": "^7.12.1",
-    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.1",
@@ -28,27 +37,37 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
-    "mini-css-extract-plugin": "^1.2.1",
+    "mini-css-extract-plugin": "^1.3.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "prettier": "^2.1.2",
     "stylelint": "^13.7.2",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
-    "terser-webpack-plugin": "^5.0.3",
+    "terser-webpack-plugin": "4.2.3",
     "typescript": "^4.0.5",
     "url-loader": "^4.1.1",
-    "webpack": "^5.4.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "4.44.2",
+    "webpack-bundle-analyzer": "^4.1.0",
+    "webpack-cli": "3.3.1",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.4.0"
   },
   "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-is": "^17.0.1",
+    "react": "17.0.0",
+    "react-dom": "17.0.0",
+    "react-hot-loader": "^4.13.0",
+    "react-is": "17.0.0",
     "styled-components": "^5.2.1"
   },
+  "engines": {
+    "node": ">=12.14.0",
+    "yarn": ">=1.22.4"
+  },
   "scripts": {
-    "lint": "eslint . --ext .js,.ts,.tsx"
+    "dev": "webpack-dev-server --config configs/webpack/dev.js --hot",
+    "build": "webpack --config configs/webpack/prod.js",
+    "lint:es": "eslint . --ext .js,.ts,.tsx",
+    "lint:style": "stylelint src/**/styled.{ts,tsx}"
   }
 }
